--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.rar filter=lfs diff=lfs merge=lfs -text
+CSE[[:space:]]6023[[:space:]]ML[[:space:]]N[[:space:]]Extra[[:space:]]Online[[:space:]]Class.zip filter=lfs diff=lfs merge=lfs -text
